# pystrategy_test_py

./: README.md  license.txt  setup.cfg  setup.py  test_file.py
pystrategy_test_py.egg-info/: PKG-INFO
