[metadata]
name = pystrategy
version = 0.0.1
author = Francisco A. Prieto Rodriguez, Francisco de Asis Fernandez, David Becerra 
author_email = faprieto@sosein.com
description = 11 Strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faprieto96/pystrategy_test_py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir =[pyGPGO]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = https://github.com/faprieto96/pyGPGO